--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -9,8 +9,8 @@
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/won_lost"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="28sp"/>
     
