adding data binding in the app

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,48 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".GameFragment"
-    android:orientation="vertical"
-    android:gravity="center_vertical">
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    
+    <data>
+        <variable
+            name="gameViewModel"
+            type="com.xcelk.guessinggame.GameViewModel" />
+    </data>
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/word"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="36sp"
-        android:letterSpacing="0.1" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center_vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/lives"
-        android:textSize="16sp"/>
+        <!-- TODO: Update blank fragment layout -->
+        <TextView
+            android:id="@+id/word"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@{gameViewModel.secretWordDisplay}"
+            android:textSize="36sp"
+            android:letterSpacing="0.1" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/incorrect_guesses"
-        android:textSize="16sp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/lives"
+            android:text="@{@string/lives_left(gameViewModel.livesLeft)}"
+            android:textSize="16sp"/>
 
-    <EditText
-        android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:id="@+id/guess"
-        android:hint="@string/guess_a_letter"
-        android:maxLength="1"
-        android:inputType="text"
-        android:autofillHints="" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/incorrect_guesses"
+            android:text="@{@string/incorrect_guesses(gameViewModel.incorrectGuesses)}"
+            android:textSize="16sp"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guess_button"
-        android:layout_gravity="center"
-        android:text="@string/guess"/>
+        <EditText
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:id="@+id/guess"
+            android:hint="@string/guess_a_letter"
+            android:maxLength="1"
+            android:inputType="text"
+            android:autofillHints="" />
 
-</LinearLayout>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/guess_button"
+            android:layout_gravity="center"
+            android:text="@string/guess"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/finish_game_button"
+            android:layout_gravity="center"
+            android:text="Finish Game"
+            android:onClick="@{() -> gameViewModel.finishGame()}"/>
+
+    </LinearLayout>
+    
+</layout>
